--- a/Project Coffee/HTML/index.html
+++ b/Project Coffee/HTML/index.html
@@ -165,8 +165,8 @@
                 </div>
               </a>
               <h2>Bella Aurora</h2>
-              <h3>NICARAGUA</h3>
-              <h4>$14</h4>
+              <h3>VIETNAM</h3>
+              <h4>100 000đ</h4>
               <button class="btn btn-default btn-block my-cart-btn" data-id="1" data-name="Bella Aurora" data-summary="summary 1" data-price="14"
                 data-quantity="1" data-image="../img/anh2.png">
                 <span class="glyphicon glyphicon-shopping-cart"></span> Add to Cart</button>
@@ -181,8 +181,8 @@
                 </div>
               </a>
               <h2>Mr. David Mburu</h2>
-              <h3>KENYA</h3>
-              <h4>$15</h4>
+              <h3>VIETNAM</h3>
+              <h4>120 000đ</h4>
               <button class="btn btn-default btn-block my-cart-btn" data-id="2" data-name="Mr. David Mburu" data-summary="summary 2" data-price="15"
                 data-quantity="1" data-image="../img/anh3.png">
                 <span class="glyphicon glyphicon-shopping-cart"></span> Add to Cart</button>
@@ -198,8 +198,8 @@
               </a>
 
               <h2>San Ramon</h2>
-              <h3>COSTA RICA</h3>
-              <h4>$15</h4>
+              <h3>VIETNAM</h3>
+              <h4>120 000đ</h4>
               <button class="btn btn-default btn-block my-cart-btn" data-id="3" data-name="San Ramon" data-summary="summary 3" data-price="15"
                 data-quantity="1" data-image="../img/anh5.png">
                 <span class="glyphicon glyphicon-shopping-cart"></span> Add to Cart</button>
@@ -215,8 +215,8 @@
               </a>
 
               <h2>Los Nacientes</h2>
-              <h3>COSTA RICA</h3>
-              <h4>$15</h4>
+              <h3>VIETNAM</h3>
+              <h4>120 000đ</h4>
               <button class="btn btn-default btn-block my-cart-btn" data-id="4" data-name="Los Nacientes" data-summary="summary 4" data-price="15"
                 data-quantity="1" data-image="../img/anh6.png">
                 <span class="glyphicon glyphicon-shopping-cart"></span> Add to Cart</button>
@@ -233,8 +233,8 @@
               </a>
 
               <h2>R.Figueroa</h2>
-              <h3>COLOMBIA</h3>
-              <h4>$14</h4>
+              <h3>VIETNAM</h3>
+              <h4>120 000đ</h4>
               <button class="btn btn-default btn-block my-cart-btn" data-id="5" data-name="R.Figueroa" data-summary="summary 5" data-price="15"
                 data-quantity="1" data-image="../img/anh7.png">
                 <span class="glyphicon glyphicon-shopping-cart"></span> Add to Cart</button>
@@ -251,8 +251,8 @@
 
               <h2>El Ishco
               </h2>
-              <h3>EL SALVADOR</h3>
-              <h4>$14</h4>
+              <h3>VIETNAM</h3>
+              <h4>120 000đ</h4>
               <button class="btn btn-default btn-block my-cart-btn" data-id="6" data-name="El Ishco" data-summary="summary 6" data-price="14"
                 data-quantity="1" data-image="../img/anh8.png">
                 <span class="glyphicon glyphicon-shopping-cart"></span> Add to Cart</button>
@@ -268,8 +268,8 @@
               </a>
 
               <h2>Meaza</h2>
-              <h3>ETHIOPIA</h3>
-              <h4>$15</h4>
+              <h3>VIETNAM</h3>
+              <h4>150 000đ</h4>
               <button class="btn btn-default btn-block my-cart-btn" data-id="7" data-name="Meaza" data-summary="summary 7" data-price="15"
                 data-quantity="1" data-image="../img/anh9.png">
                 <span class="glyphicon glyphicon-shopping-cart"></span> Add to Cart</button>
@@ -286,9 +286,9 @@
               </a>
 
               <h2>La Esperanza</h2>
-              <h3>EL SALVADOR
+              <h3>VIETNAM
               </h3>
-              <h4>$15</h4>
+              <h4>150 000đ</h4>
               <button class="btn btn-default btn-block my-cart-btn" data-id="8" data-name="La Esperanza" data-summary="summary 8" data-price="15"
                 data-quantity="1" data-image="../img/anh10.png">
                 <span class="glyphicon glyphicon-shopping-cart"></span> Add to Cart</button>
