--- a/Project Coffee/HTML/LienHe.html
+++ b/Project Coffee/HTML/LienHe.html
@@ -58,11 +58,11 @@
                                 <ul class="nav navbar-nav navbar-right">
                                     <li>
                                         <a href="#">
-                                            <span class="glyphicon glyphicon-user"></span> Login</a>
+                                            <span class="glyphicon glyphicon-user"></span> Đăng Nhập</a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <span class="glyphicon glyphicon-log-in"></span> Sign Up</a>
+                                            <span class="glyphicon glyphicon-log-in"></span> Đăng Kí</a>
                                     </li>
                                 </ul>
                             </div>
